--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "proxy": "http://localhost:8081",
   "dependencies": {
     "axios": "^0.19.0",
+    "chroma-js": "^2.1.0",
+    "emoji-mart": "^2.11.2",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.10.2",
     "react-moment": "^0.9.7",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-router-transition": "^2.0.0",
     "react-scripts": "3.2.0",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
