--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
   "private": true,
   "proxy": "http://localhost:8081",
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.8.2",
     "axios": "^0.19.0",
     "chroma-js": "^2.1.0",
     "emoji-mart": "^2.11.2",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
+    "rc-slider": "^8.7.1",
     "react": "^16.10.2",
+    "react-color": "^2.18.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.10.2",
+    "react-material-ui-form-validator": "^2.0.9",
     "react-moment": "^0.9.7",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^2.0.0",
     "react-scripts": "3.2.0",
+    "react-sortable-hoc": "^1.10.1",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
