--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "axios": "^0.19.0",
     "chroma-js": "^2.1.0",
     "emoji-mart": "^2.11.2",
-    "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "rc-slider": "^8.7.1",
     "react": "^16.10.2",
@@ -18,15 +17,11 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.10.2",
     "react-material-ui-form-validator": "^2.0.9",
-    "react-moment": "^0.9.7",
-    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^2.0.0",
     "react-scripts": "3.2.0",
     "react-sortable-hoc": "^1.10.1",
-    "react-transition-group": "^4.3.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
