--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "chroma-js": "^2.1.0",
     "emoji-mart": "^2.11.2",
+    "material-ui-color-picker": "^3.4.0",
     "prop-types": "^15.7.2",
     "rc-slider": "^8.7.1",
     "react": "^16.10.2",
