--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.8.2",
+    "array-move": "^2.2.1",
     "axios": "^0.19.0",
     "chroma-js": "^2.1.0",
     "emoji-mart": "^2.11.2",
